Reduce deprecation in clover-core.
* Use java.math.RoundingMode
* Factory method for Float
* Avoid Class.newInstance